removed seat rotation logic
