# backend/docs/swagger.json
@@ -832,52 +832,6 @@
                 }
             }
         },
-        "/seats/{id}/rotate": {
-            "put": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Seats"
-                ],
-                "summary": "Rotate a seat",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Seat ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Rotation",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.RotateSeatRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dto.SeatResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/teams": {
             "get": {
                 "produces": [
@@ -1279,9 +1233,6 @@
                 "pos_y": {
                     "type": "integer"
                 },
-                "rotation": {
-                    "type": "integer"
-                },
                 "team_id": {
                     "type": "string"
                 }
@@ -1361,9 +1312,6 @@
                 },
                 "room_id": {
                     "type": "string"
-                },
-                "rotation": {
-                    "type": "integer"
                 },
                 "team_id": {
                     "type": "string"
@@ -1502,14 +1450,6 @@
                 }
             }
         },
-        "dto.RotateSeatRequest": {
-            "type": "object",
-            "properties": {
-                "rotation": {
-                    "type": "integer"
-                }
-            }
-        },
         "dto.SeatResponse": {
             "type": "object",
             "properties": {
@@ -1527,9 +1467,6 @@
                 },
                 "room_id": {
                     "type": "string"
-                },
-                "rotation": {
-                    "type": "integer"
                 },
                 "team_id": {
                     "type": "string"
