# backend/internal/adapters/http/dto/response.go
@@ -45,24 +45,22 @@ func TeamToResponse(team *domain.Team) TeamResponse {
 }
 
 type SeatResponse struct {
-	ID       uuid.UUID `json:"id"`
-	RoomID   uuid.UUID `json:"room_id"`
-	TeamID   uuid.UUID `json:"team_id"`
-	Label    string    `json:"label"`
-	PosX     int       `json:"pos_x"`
-	PosY     int       `json:"pos_y"`
-	Rotation int       `json:"rotation"`
+	ID     uuid.UUID `json:"id"`
+	RoomID uuid.UUID `json:"room_id"`
+	TeamID uuid.UUID `json:"team_id"`
+	Label  string    `json:"label"`
+	PosX   int       `json:"pos_x"`
+	PosY   int       `json:"pos_y"`
 }
 
 func SeatToResponse(seat *domain.Seat) SeatResponse {
 	return SeatResponse{
-		ID:       seat.ID,
-		RoomID:   seat.RoomID,
-		TeamID:   seat.TeamID,
-		Label:    seat.Label,
-		PosX:     seat.Position.X,
-		PosY:     seat.Position.Y,
-		Rotation: int(seat.Rotation),
+		ID:     seat.ID,
+		RoomID: seat.RoomID,
+		TeamID: seat.TeamID,
+		Label:  seat.Label,
+		PosX:   seat.Position.X,
+		PosY:   seat.Position.Y,
 	}
 }
 
